deps/chakrashim/core/test/Error/bug560940.js
//-------------------------------------------------------------------------------------------------------
// Copyright (C) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE.txt file in the project root for full license information.
//-------------------------------------------------------------------------------------------------------

try {
    throw '0';
}
catch (e) {
    (e === '0') ? print("Pass") : print("Fail");
}
